1) Couple of changes in test structures (not in their functionality), 2) Fixed warnings/defects reported by FindBugs in the entire code.